--- a/thesis/07Jakosc.tex
+++ b/thesis/07Jakosc.tex
@@ -33,7 +33,7 @@ Testy akceptacyjne rozpatrywane są na dwóch poziomach: automatycznym i manualn
 
 \subsubsection{MAT}
 \label{Chapter7131}
-
+{\color{red}Testy akceptacyjne wymagają poprawienia -- dane od zespołu zarządzającego były nieaktualne!!!}
 Poniżej przedstawiono Manualne Testy Akceptacyjne:
 
 \matbegin{TC1}{Logowanie do systemu przez eKonto}
@@ -43,26 +43,26 @@ Poniżej przedstawiono Manualne Testy Akceptacyjne:
 \matpre{Połączenie z Internetem}
 \matsteps
 \matstep{1}{Użytkownik wpisuje adres systemu}{Strona logowania do system iQuest}
-\matstep{2}{Użytkownik naciska przycisk “Zaloguj przez eKonto”}{Strona logowania eLogin}
+\matstep{2}{Użytkownik naciska przycisk ,,Zaloguj przez eKonto''}{Strona logowania eLogin}
 \matstep{3}{Użytkownik wpisuje dane logowania}{}
-\matstep{4}{Użytkownik naciska przycisk “Zaloguj”}{Przekierowanie na stronę systemu iQuest, wyświetlenie strony głównej z zalogowanym użytkownikiem.}
+\matstep{4}{Użytkownik naciska przycisk ,,Zaloguj''}{Przekierowanie na stronę systemu iQuest, wyświetlenie strony głównej z zalogowanym użytkownikiem.}
 \matremark{}
 
 \matbegin{TC2}{Stworzenie Ankiety}
 \matpres
 \matpre{Zalogowany użytkownik z prawem do tworzenia ankiet}
 \matsteps
-\matstep{1}{Użytkownik wybiera przycisk „Stwórz ankietę”}{Strona umożliwiająca tworzenie ankiet}
+\matstep{1}{Użytkownik wybiera przycisk ,,Stwórz ankietę''}{Strona umożliwiająca tworzenie ankiet}
 \matstep{2}{Użytkownik podaje nazwę ankiety}{}
 \matstep{3}{Użytkownik podaje wstęp  i podsumowanie ankiety}{}
 \matstep{4}{Użytkownik dodaje pytanie jednokrotnego wyboru}{Pojawia się pole na wpisanie treści pytania}
 \matstep{5}{Użytkownik wpisuje treść pytania}{}
-\matstep{6}{Użytkownik naciska przycisk „Dodaj odpowiedź” dwukrotnie}{Pojawiają się dwa pola do wpisania możliwych odpowiedzi}
+\matstep{6}{Użytkownik naciska przycisk „Dodaj odpowiedź'' dwukrotnie}{Pojawiają się dwa pola do wpisania możliwych odpowiedzi}
 \matstep{7}{Użytkownik podaje treści możliwych odpowiedzi}{}
-\matstep{8}{Użytkownik dodaje stronę wciskając przycisk „Dodaj stronę”}{Wyświetla się nowa strona na dodawanie pytań}
+\matstep{8}{Użytkownik dodaje stronę wciskając przycisk „Dodaj stronę''}{Wyświetla się nowa strona na dodawanie pytań}
 \matstep{9}{Użytkownik dodaje pytanie otwarte}{Wyświetla się pole na wpisanie treści pytania}
 \matstep{10}{Użytkownik wpisuje treść pytania}{}
-\matstep{11}{Użytkownik wybiera przycisk „Zapisz zmiany”}{Komunikat o pomyślnym stworzeniu ankiety}
+\matstep{11}{Użytkownik wybiera przycisk „Zapisz zmiany''}{Komunikat o pomyślnym stworzeniu ankiety}
 \matremark{}
 
 \begin{table}[H]
@@ -82,10 +82,10 @@ Krok & \textbf{Dane} \\ \hline
 \matpres
 \matpre{Zalogowany użytkownik z prawem do tworzenia ankiet}
 \matsteps
-\matstep{1}{Użytkownik wybiera przycisk „Stwórz ankietę”}{Strona umożliwiająca tworzenie ankiet}
+\matstep{1}{Użytkownik wybiera przycisk „Stwórz ankietę''}{Strona umożliwiająca tworzenie ankiet}
 \matstep{2}{Użytkownik podaje nazwę ankiety}{}
 \matstep{3}{Użytkownik podaje wstęp  i podsumowanie ankiety}{}
-\matstep{4}{Użytkownik wybiera przycisk „Zapisz zmiany”}{Komunikat o braku pytań w ankiecie}
+\matstep{4}{Użytkownik wybiera przycisk „Zapisz zmiany''}{Komunikat o braku pytań w ankiecie}
 \matremark{}
 
 \matbegin{TC3}{Edycja ankiety}
@@ -93,12 +93,12 @@ Krok & \textbf{Dane} \\ \hline
 \matpre{Zalogowany użytkownik z prawem do tworzenia ankiet}
 \matpre{Użytkownik posiada prawo do edycji ankiety ,,Ankiety testowej''}
 \matsteps
-\matstep{1}{Użytkownik wybiera przycisk „Katalog Ankiet”}{Strona z listą ankiet do których prawo ma użytkownik.}
-\matstep{2}{Użytkownik wybiera przycisk „edytuj” przy „Ankiecie Testowej”}{Strona umożliwiająca edycję „Ankiety Testowej”}
-\matstep{3}{Użytkownik wciska przycisk „usuń” przy pytaniu drugim}{Pytanie drugie znika}
-\matstep{4}{Użytkownik naciska przycisk „Dodaj odpowiedź” przy pytaniu pierwszym}{Pojawia się pole do wpisania możliwej odpowiedzi}
+\matstep{1}{Użytkownik wybiera przycisk „Katalog Ankiet''}{Strona z listą ankiet do których prawo ma użytkownik.}
+\matstep{2}{Użytkownik wybiera przycisk „edytuj'' przy „Ankiecie Testowej''}{Strona umożliwiająca edycję „Ankiety Testowej''}
+\matstep{3}{Użytkownik wciska przycisk „usuń'' przy pytaniu drugim}{Pytanie drugie znika}
+\matstep{4}{Użytkownik naciska przycisk „Dodaj odpowiedź'' przy pytaniu pierwszym}{Pojawia się pole do wpisania możliwej odpowiedzi}
 \matstep{5}{Użytkownik wpisuje możliwą odpowiedź}{}
-\matstep{6}{Użytkownik wybiera przycisk „Zapisz zmiany”}{Strona wyświetla komunikat potwierdzający zapisanie zmian w ankiecie.}
+\matstep{6}{Użytkownik wybiera przycisk „Zapisz zmiany''}{Strona wyświetla komunikat potwierdzający zapisanie zmian w ankiecie.}
 \matremark{}
 
 \begin{table}[H]
@@ -115,28 +115,80 @@ Krok & \textbf{Dane} \\ \hline
 \matpre{Zalogowany użytkownik z prawem do tworzenia ankiet}
 \matpre{Użytkownik posiada prawo do edycji ankiety ,,Ankiety testowej''}
 \matsteps
-\matstep{1}{Użytkownik wybiera przycisk „Katalog Ankiet”}{Strona z listą ankiet do których prawo ma użytkownik.}
-\matstep{2}{Użytkownik wybiera przycisk „edytuj” przy „Ankiecie Testowej”}{Strona umożliwiająca edycję „Ankiety Testowej”}
-\matstep{3}{Użytkownik wciska przycisk „usuń” przy każdym z pytań}{Pytania znikają}
-\matstep{4}{Użytkownik wybiera przycisk „Zapisz zmiany”}{Strona wyświetla komunikat, że ankieta nie posiada pytań i prosi o ich dodanie.}
+\matstep{1}{Użytkownik wybiera przycisk „Katalog Ankiet''}{Strona z listą ankiet do których prawo ma użytkownik.}
+\matstep{2}{Użytkownik wybiera przycisk „edytuj'' przy „Ankiecie Testowej''}{Strona umożliwiająca edycję „Ankiety Testowej''}
+\matstep{3}{Użytkownik wciska przycisk „usuń'' przy każdym z pytań}{Pytania znikają}
+\matstep{4}{Użytkownik wybiera przycisk „Zapisz zmiany''}{Strona wyświetla komunikat, że ankieta nie posiada pytań i prosi o ich dodanie.}
 \matremark{}
 
 \matbegin{TC4}{Wybranie grupy docelowej}
 \matpres
 \matpre{Zalogowany użytkownik z prawami do tworzenia ankiet}
-\matpre{Użytkownik posiada prawa do ankiety „Ankieta Testowa”}
-\matpre{Użytkownik posiada prawo do ankietowania grupy docelowej „test”}
+\matpre{Użytkownik posiada prawa do ankiety „Ankieta Testowa''}
+\matpre{Użytkownik posiada prawo do ankietowania grupy docelowej „test''}
 \matsteps
 \matstep{1}{Użytkownik wybiera przycisk ,,Włącz tryb edycji''}{Interfejs edycji Moodle}
-\matstep{2}{Użytkownik wybiera przycisk „edytuj” przy „Ankiecie Testowej”}{Strona umożliwiająca edycję „Ankiety Testowej”}
-\matstep{3}{Użytkownik wybiera grupę docelową „test”}{}
-\matstep{4}{Użytkownik wybiera przycisk „Zapisz zmiany”}{Strona wyświetla komunikat, że ankieta została zaktualizowana pomyślnie.}
+\matstep{2}{Użytkownik wybiera przycisk „edytuj'' przy „Ankiecie Testowej''}{Strona umożliwiająca edycję „Ankiety Testowej''}
+\matstep{3}{Użytkownik wybiera grupę docelową „test''}{}
+\matstep{4}{Użytkownik wybiera przycisk „Zapisz zmiany''}{Strona wyświetla komunikat, że ankieta została zaktualizowana pomyślnie.}
 \matstep{5}{Respondent otrzymuje email z powiadomieniem o ankiecie}{}
 \matremark{}
 
+\matbegin{TC5}{Udzielanie odpowiedzi}
+\matpres
+\matpre{Zalogowany użytkownik}
+\matpre{Użytkownik znajduje się w grupie docelowej ankiety ,,testowa''}
+\matpre{Użytkownik nie odpowiadał udzielał odpowiedzi na ankietę ,,testowa''}
+\matsteps
+\matstep{1}{System prezentuje ankiety na które użytkownik jeszcze nie odpowiedział}{}
+\matstep{2}{Użytkownik wybiera ankietę ,,testowa''}{System prezentuje ankietę}
+\matstep{3}{Użytkownik zaznacza odpowiedź na pytanie 1 jako ,,tak''}{}
+\matstep{4}{Użytkownik podaje odpowiedź na pytanie drugie jako ,,tak''}{}
+\matstep{5}{Użytkownik potwierdza wypełnienie ankiety przyciskiem ,,Wyślij''}{System prezentuje ankiety na które użytkownik jeszcze nie odpowiedział oraz komunikat o pomyślnym przesłaniu odpowiedzi}
+\matstep{6}{Respondent otrzymuje email z powiadomieniem o ankiecie}{}
+\matremark{}
 
+\matbegin{TC6}{Sprawdzenie wyników}
+\matpres
+\matpre{Zalogowany użytkownik z prawem do oglądania wyników ankiety ,,Testowa''}
+\matsteps
+\matstep{1}{Użytkownik wybiera badanie, którego podstawowe wyniki chce sprawdzić}{System prezentuje podsumowanie ankiety}
+\matremark{Dotyczy podstawowych wyników. Wyniki zaawansowane obsługuje zewnętrzny serwer BI}
 
-{\color{red}Niedodane jeszcze TC: Udzielanie odp., Spr. wyników., Tworzenie grupy docelowej, Edycja grupy docelowej, Logowanie bez eKonta, }
+\matbegin{TC7}{Dodawanie grupy docelowej}
+\matpres
+\matpre{Zalogowany administrator z prawami do tworzenia grup docelowych}
+\matpre{Brak w systemie grupy docelowej ,,Grupa 1''}
+\matsteps
+\matstep{1}{Administrator wybiera przycisk ,,Zarządzaj grupami docelowymi''}{System prezentuje dostępne grupy docelowe w systemie}
+\matstep{2}{Administrator wybiera przycisk ,,dodaj''}{System prezentuje interfejs dodawania grupy docelowej}
+\matstep{3}{Administrator podaję nazwę nowej grupy „Grupa 1” i wskazuje jej członków}{}
+\matstep{4}{Administrator wybiera grupę nadrzędną dla nowej grupy docelowej}{System automatycznie zapisują zmiany}
+\matremark{Test przygotowany na podstawie makiety systemu iQuest}
+
+\matbegin{TC8}{Edycja grupy docelowej}
+\matpres
+\matpre{Zalogowany administrator z prawami do tworzenia grup docelowych}
+\matpre{Grupa docelowa ,,Grupa 1'' istnieje w systemie}
+\matsteps
+\matstep{1}{Administrator wybiera przycisk ,,Zarządzaj grupami docelowymi''}{System prezentuje dostępne grupy docelowe w systemie}
+\matstep{2}{Administrator wybiera przycisk ,,zmień nazwę''}{System prezentuje interfejs zmiany nazwy grupy docelowej}
+\matstep{3}{Administrator pozostawia nazwę niezmienioną i zatwierdza zmiany}{System prezentuje dostępne grupy docelowe w systemie}
+\matstep{4}{Administrator wybiera grupę nadrzędną dla grupy docelowej i dodaje nowego członka do grupy}{System automatycznie zapisują zmiany}
+\matremark{Test przygotowany na podstawie makiety systemu iQuest}
+
+\matbegin{TC9}{Edycja grupy docelowej}
+\matpres
+\matpre{Użytkownik jest niezalogowany}
+\matpre{Istnieje konto użytkownika w systemie}
+\matsteps
+\matstep{1}{Użytkownik wpisuje adres systemu}{Strona główna moodla z kursem iQuest}
+\matstep{2}{Użytkownik naciska przycisk ,,Zaloguj się''}{Strona logowania}
+\matstep{3}{Użytkownik wpisuje dane logowania}{}
+\matstep{4}{Użytkownik naciska przycisk ,,Zaloguj się''}{Przekierowanie na główną stronę moodla z kursem iQuest. Wyświetla się napis: ,,Jesteś zalogowany(a) jako...''}
+\matremark{}
+
+{\color{red}Niedodane jeszcze TC: Logowanie bez eKonta, }
 
 Dodatkowo, poniżej znajduje się wykaz mapujący przypadki testowe do przypadków użycia:
 \begin{itemize}
