Lista programow +VIM

--- a/thesis/10Dodatki.tex
+++ b/thesis/10Dodatki.tex
@@ -135,9 +135,11 @@ Serdeczne podziękowania należą się zespołowi zarządzającemu, przygotowane
 \section{Wykaz użytych narzędzi i technologii}
 \label{ChapterA4}
 
+Numery w nawiasach w poniższej liście oznaczają numer wersji.
+
 \begin{itemize}
 \item Apache (2.2.22)
-\item bash (4.2.37)
+\item BASH (4.2.37)
 \item Check Point's Linux SNX (800007027)
 \item Chrome (24.0)
 \item cron (3.0)
@@ -150,7 +152,7 @@ Serdeczne podziękowania należą się zespołowi zarządzającemu, przygotowane
 \item JavaScript
 \item JetBrains PhpStorm (5.0.4)
 \item Kazam Screencaster (1.0.6)
-\item meld (1.6.0)
+\item Meld (1.6.0)
 \item Moodle (2.3.1)
 \item Mozilla Firefox (18.0.1)
 \item MySQL (14.14)
@@ -165,6 +167,7 @@ Serdeczne podziękowania należą się zespołowi zarządzającemu, przygotowane
 \item SVN (1.7.5)
 \item TexLive (20120611)
 \item TexMaker (3.4)
+\item VIM (7.3)
 \item Zend PHP Developer Tools for Eclipse IDE (3.0.2)
 \end{itemize}
 
