Poprawki w tekscie o orm, wnioskach

--- a/thesis/08Wnioski.tex
+++ b/thesis/08Wnioski.tex
@@ -25,3 +25,20 @@ Podczas pracy zebraliśmy następujące doświadczenia bezpośrednio związane z
 
 Bardzo istotna cześć doświadczeń związanych z projektem wiąże się z pracą zespołową.
 Nauczyliśmy się, że dobrego członka zespołu wyróżnia: sumienność, punktualność, odpowiedzialność, dokładność, terminowość, prawdomówność, uczciwość, asertywność, zdolność kreatywnego myślenia, kultura bycia oraz komunikatywność. Praca w grupie nad dużym projektem wymaga dobrej koordynacji prac. Dostępność architekta i kierownika projektu znacząco ułatwiła pracę nad projektem. Dzięki podziałowi zadań, każdy członek zespołu mógł pogłębić swoje zainteresowania. Wraz z upływem każdy członek zespołu znalazł sobie zbiór typów zagadnień, które potrafił zrealizować szybciej i lepiej ze względu na wcześniej pozyskane doświadczenie. Uzyskane doświadczenia z pewnością przydadzą się nam w pracy zawodowej.
+
+Wnioski:
+\begin{itemize}
+\item Łukasz Wieczorek:
+\begin{itemize}
+\item Zatwierdzaj swoje zmiany (ang. \emph{commit}) dopiero, gdy funkcjonalność, którą miałeś zaimplementować, jest kompletna i przetestowana jednostkowo oraz akceptacyjnie,
+\item Przygotuj wcześniej logikę, z której będą korzystać programiści interfejsu, by nie opóźniać ich pracy,
+\item Jeśli nie wiesz, jak zaimplementować daną funkcjonalność zapytaj architekta -- zwykle dysponuje on większą wiedzą ogólną,
+\item Werbalizacja problemu bardzo często pomaga w jego rozwiązaniu,
+\item Wcześniejsza refaktoryzacja znacznie ułatwia dalszą pracę nad kodem,
+\item Wielokrotnie powtarzane fragmenty kodu należy jak najszybciej zrefaktoryzować, by uchronić się od poprawiania podobnych konstrukcji składniowych,
+\item ,,Nie należy mnożyć bytów ponad potrzebę'',
+\item Testy jednostkowe ułatwiają refaktoryzację kodu -- nawet jeśli ich utrzymywanie jest kosztowne, warto je pisać,
+\item Podstawą efektywnej pracy jest kontrola czasu poświęcanego na realizację przydzielonych zdań,
+\item Dobra komunikacja w zespole to podstawa sukcesu,
+\end{itemize}
+\end{itemize}
