--- a/thesis/12DodatkiC.tex
+++ b/thesis/12DodatkiC.tex
@@ -3,7 +3,7 @@
 
 \begin{landscape}
 \begin{figure}[th]
-\centering\includegraphics[height=\textheight, width=\textwidth]{figures/iQuest_Database}
+\centering\includegraphics[height=\textheight, width=1.5\textwidth]{figures/iQuest_Database}
 \caption{Diagram Bazy Danych}\label{rys:iQuest_DataBase}
 \end{figure}
 \end{landscape}
